--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+disqus_username: kod4284-github-io
 
 # Netease settings
 netease_comment: false
