Fix error occurs in local environment.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: kodw4284@gmail.com
 description: "소프트웨어 개발자 | Software Engineer"
 keyword: "Daewoong, Kod, @Daewoong, @Daewoong_Ko, @daewoong, Daewoong Blog, Kod Blog, Web, JavaScript, React"
 url: "https://kod4284.github.io"              # your host, for absolute URL
-baseurl: "https://kod4284.github.io"                             # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""                                   # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
