--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,7 @@ anchorjs: true                          # if you want to customize anchor. check
 # from PR#40, to support local preview for Jekyll 3.0
 # make sure you have this gem installed
 # `$ gem install jekyll-paginate`
-plugins: [jekyll-paginate]
-gems:
-  - jekyll-sitemap
+plugins: ['jekyll-paginate', 'jekyll-sitemap']
 
 
 # Markdown settings
