--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Kod Blog",
   "short_name": "Kod Blog",
-  "description": "About an engineer & designer who loves web.",
+  "description": "Kod's Blog",
   "icons": [{
     "src": "icons/128.png",
     "sizes": "128x128",
